<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ViewMedicationActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/medicationDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/medicationNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/medication_name" />
        <EditText
            android:id="@+id/EditMedicationName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_name_of_medicine"
            android:inputType="text"
            android:autofillHints="" />

        <!-- Time Picker -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_to_take"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Dose EditText -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dose"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/doseEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_dose"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <!-- AM/PM Selection -->
        <RadioGroup
            android:id="@+id/amPmRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/amRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/am"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/pmRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/pm" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/medicationDetailsLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

</RelativeLayout>
